# vllm

./: .gitignore  .gitmodules  CMakeLists.txt  MOONCAKE_QAIC_HANDOFF.md  QAIC_PAGED_ATTENTION_REPORT.md  aic_plot.py  check.sh  dsc-env.sh  dsc.sh  dsc.yml  pyproject.toml  run-dsc.sh  run-ngram.sh  run.sh  setup.py
0512/: result_ngram_len128_c1.txt  result_ngram_len128_c16.txt  result_ngram_len128_c2.txt  result_ngram_len128_c32.txt  result_ngram_len128_c4.txt  result_ngram_len128_c48.txt  result_ngram_len128_c64.txt  result_ngram_len128_c8.txt  result_ngram_len128_c96.txt  result_ngram_len2048_c1.txt  result_ngram_len2048_c16.txt  result_ngram_len2048_c2.txt  result_ngram_len2048_c32.txt  result_ngram_len2048_c4.txt  (+22 more)
csrc/: ops.h  (+2 more)
rust/: Cargo.toml  pyproject.toml
rust/.cargo/: config.toml
rust/src/: block_hash.rs  block_pool.rs  lib.rs  ngram.rs  schedule.rs  serial_helpers.rs  stop_check.rs  stop_strings.rs  update_output.rs
vllm-qaic/: PAGED_BOX_RUNBOOK.md  QAIC_TPOT_DECODE_PRIORITY.md  README.md  pyproject.toml
vllm-qaic/docs/: BRANCH_CHANGES_ZH.md  EXPLAINER_plain_zh.md  MIGRATION_GPUModelRunner_old_vs_new.md  MIGRATION_zh.md  QAIC_COMMIT_SUMMARY.md  QAIC_DECODE_PRIORITY_MITIGATION_ZH.md  REBUILD_input_prep_4B.md  UnieAI_Quic_integrated.md  mixed_prefill_decode_and_chunked_prefill.md  qaic_decode_priority_scheduler_zh.md  qaic_paged_kv_branch_update_zh.md  v1_scheduler_design_zh.md
vllm-qaic/scripts/: port_from_fork.sh
vllm-qaic/tests/: gate1_import_qaicrt.py  gate2_load_qpc.py  test_fused_decode_window_routing.py  test_parse_qaic_prof.py  test_qaic_kv_staging.py  test_qaic_scheduler.py
vllm-qaic/tools/: parse_qaic_prof.py  run_tpot_ab.sh
vllm-qaic/vllm_qaic/: __init__.py  compile_config.py  fused_decode_window.py  model_loader.py  model_runner.py  platform.py  qserve_model_runner.py  quant.py  scheduler.py  session.py  worker.py
vllm-qaic/vllm_qaic/kv_connector/: __init__.py  qaic_kv_staging.py  qaic_mooncake_store_connector.py
(+373 files in other folders)
