[package]
name = "vllm-scheduler-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust-accelerated scheduler core for vLLM"

[lib]
name = "vllm_scheduler_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
